--- a/CeasarCrypt/CeasarCrypt.csproj
+++ b/CeasarCrypt/CeasarCrypt.csproj
@@ -539,6 +539,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\WordDatabase.mdf" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -619,9 +620,7 @@
     <Content Include="Views\Result\Decryption.cshtml" />
     <Content Include="Views\Result\FindKey.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
